apps/bff/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service': 'bff'
        'consul.hashicorp.com/connect-service-upstreams': 'articles:50000,auth:50054'
    spec:
      containers:
      - name: application
        image: oyas/web-app-bff
        ports:
        - containerPort: 4000
