apps/bff/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: application
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: application
          servicePort: 4000
